// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SiteAdminExternalServiceForm /> create GitHub 1`] = `
<Form
  className="external-service-form"
  onSubmit={[Function]}
>
  <form
    className="external-service-form "
    onInvalid={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label
        className="font-weight-bold"
        htmlFor="e2e-external-service-form-display-name"
      >
        Display name:
      </label>
      <input
        autoComplete="off"
        autoCorrect="off"
        autoFocus={true}
        className="form-control"
        disabled={false}
        id="e2e-external-service-form-display-name"
        onChange={[Function]}
        required={true}
        spellCheck={false}
        type="text"
        value="GitHub"
      />
    </div>
    <div
      className="form-group"
    >
      <DynamicallyImportedMonacoSettingsEditor
        actions={Array []}
        canEdit={false}
        className="e2e-external-service-editor"
        height={350}
        history="[History]"
        isLightTheme={true}
        jsonSchema={
          Object {
            "$id": "json-schema-id",
          }
        }
        loading={false}
        onChange={[Function]}
        value="{}"
      >
        DynamicallyImportedMonacoSettingsEditor
      </DynamicallyImportedMonacoSettingsEditor>
      <p
        className="form-text text-muted"
      >
        <small>
          Use Ctrl+Space for completion, and hover over JSON properties for documentation.
        </small>
      </p>
    </div>
    <button
      className="btn btn-primary mb-3 e2e-add-external-service-button"
      disabled={false}
      type="submit"
    >
      Add repositories
    </button>
  </form>
</Form>
`;

exports[`<SiteAdminExternalServiceForm /> edit GitHub 1`] = `
<Form
  className="external-service-form"
  onSubmit={[Function]}
>
  <form
    className="external-service-form "
    onInvalid={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label
        className="font-weight-bold"
        htmlFor="e2e-external-service-form-display-name"
      >
        Display name:
      </label>
      <input
        autoComplete="off"
        autoCorrect="off"
        autoFocus={true}
        className="form-control"
        disabled={false}
        id="e2e-external-service-form-display-name"
        onChange={[Function]}
        required={true}
        spellCheck={false}
        type="text"
        value="GitHub"
      />
    </div>
    <div
      className="form-group"
    >
      <DynamicallyImportedMonacoSettingsEditor
        actions={Array []}
        canEdit={false}
        className="e2e-external-service-editor"
        height={350}
        history="[History]"
        isLightTheme={true}
        jsonSchema={
          Object {
            "$id": "json-schema-id",
          }
        }
        loading={false}
        onChange={[Function]}
        value="{}"
      >
        DynamicallyImportedMonacoSettingsEditor
      </DynamicallyImportedMonacoSettingsEditor>
      <p
        className="form-text text-muted"
      >
        <small>
          Use Ctrl+Space for completion, and hover over JSON properties for documentation.
        </small>
      </p>
    </div>
    <button
      className="btn btn-primary mb-3 e2e-add-external-service-button"
      disabled={false}
      type="submit"
    >
      Add repositories
    </button>
  </form>
</Form>
`;

exports[`<SiteAdminExternalServiceForm /> edit GitHub, loading 1`] = `
<Form
  className="external-service-form"
  onSubmit={[Function]}
>
  <form
    className="external-service-form "
    onInvalid={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label
        className="font-weight-bold"
        htmlFor="e2e-external-service-form-display-name"
      >
        Display name:
      </label>
      <input
        autoComplete="off"
        autoCorrect="off"
        autoFocus={true}
        className="form-control"
        disabled={true}
        id="e2e-external-service-form-display-name"
        onChange={[Function]}
        required={true}
        spellCheck={false}
        type="text"
        value="GitHub"
      />
    </div>
    <div
      className="form-group"
    >
      <DynamicallyImportedMonacoSettingsEditor
        actions={Array []}
        canEdit={false}
        className="e2e-external-service-editor"
        height={350}
        history="[History]"
        isLightTheme={true}
        jsonSchema={
          Object {
            "$id": "json-schema-id",
          }
        }
        loading={true}
        onChange={[Function]}
        value="{}"
      >
        DynamicallyImportedMonacoSettingsEditor
      </DynamicallyImportedMonacoSettingsEditor>
      <p
        className="form-text text-muted"
      >
        <small>
          Use Ctrl+Space for completion, and hover over JSON properties for documentation.
        </small>
      </p>
    </div>
    <button
      className="btn btn-primary mb-3 e2e-add-external-service-button"
      disabled={true}
      type="submit"
    >
      <LoadingSpinner
        className="icon-inline"
      >
        <div
          className="loading-spinner icon-inline"
        />
      </LoadingSpinner>
      Add repositories
    </button>
  </form>
</Form>
`;
